--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,33 +2,38 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.1.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-      - id: check-added-large-files
-  - repo: git://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.6
-    hooks:
-      - id: forbid-tabs
-        exclude_types: [python, javascript, dtd, markdown, makefile, xml]
-        exclude: binary|\.bin$
-  - repo: git://github.com/kintoandar/pre-commit.git
-    rev: v2.1.0
-    hooks:
-      - id: terraform_fmt
-  - repo: https://github.com/pre-commit/pre-commit-hooks.git
-    rev: v2.1.0
-    stages:
-      - commit
-      - push
-    hooks:
-      - id: detect-aws-credentials
-      - id: detect-private-key
-  - repo: https://github.com/detailyang/pre-commit-shell
-    rev: 1.0.4
-    hooks:
-      - id: shell-lint
-  - repo: git://github.com/igorshubovych/markdownlint-cli
-    rev: v0.13.0
-    hooks:
-      - id: markdownlint
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
+    -   id: check-merge-conflict
+- repo: git://github.com/Lucas-C/pre-commit-hooks
+  rev: v1.1.6
+  hooks:
+  - id: forbid-tabs
+    exclude_types: [python, javascript, dtd, markdown, makefile, xml]
+    exclude: binary|\.bin$
+- repo: git://github.com/kintoandar/pre-commit.git
+  rev: v2.1.0
+  hooks:
+  - id: terraform_fmt
+- repo: https://github.com/pre-commit/pre-commit-hooks.git
+  rev: v2.2.3
+  stages:
+  - commit
+  - push
+  hooks:
+  -   id: detect-aws-credentials
+  -   id: detect-private-key
+- repo: https://github.com/detailyang/pre-commit-shell
+  rev: 1.0.5
+  hooks:
+  - id: shell-lint
+- repo: git://github.com/igorshubovych/markdownlint-cli
+  rev: v0.17.0
+  hooks:
+  - id: markdownlint
+- repo: git://github.com/antonbabenko/pre-commit-terraform
+  rev: v1.16.0
+  hooks:
+    - id: terraform_docs
