--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,16 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
-    -   id: check-merge-conflict
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.3.0
+  hooks:
+   -  id: check-json
+   -  id: check-merge-conflict
+   -   id: trailing-whitespace
+   -   id: end-of-file-fixer
+   -   id: check-yaml
+   -   id: check-added-large-files
+   -   id: check-merge-conflict
 - repo: git://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.1.6
+  rev: v1.1.7
   hooks:
   - id: forbid-tabs
     exclude_types: [python, javascript, dtd, markdown, makefile, xml]
