--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.3.0
+- repo: git://github.com/pre-commit/pre-commit-hooks
+  rev: v2.4.0
   hooks:
    -  id: check-json
    -  id: check-merge-conflict
@@ -8,7 +8,9 @@ repos:
    -   id: end-of-file-fixer
    -   id: check-yaml
    -   id: check-added-large-files
-   -   id: check-merge-conflict
+   -   id: pretty-format-json
+       args:
+       - --autofix
 - repo: git://github.com/Lucas-C/pre-commit-hooks
   rev: v1.1.7
   hooks:
@@ -19,23 +21,23 @@ repos:
   rev: v2.1.0
   hooks:
   - id: terraform_fmt
-- repo: https://github.com/pre-commit/pre-commit-hooks.git
-  rev: v2.3.0
+- repo: git://github.com/pre-commit/pre-commit-hooks
+  rev: v2.4.0
   stages:
   - commit
   - push
   hooks:
   -   id: detect-aws-credentials
   -   id: detect-private-key
-- repo: https://github.com/detailyang/pre-commit-shell
+- repo: git://github.com/detailyang/pre-commit-shell
   rev: 1.0.5
   hooks:
   - id: shell-lint
 - repo: git://github.com/igorshubovych/markdownlint-cli
-  rev: v0.18.0
+  rev: v0.20.0
   hooks:
   - id: markdownlint
 - repo: git://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.19.0
+  rev: v1.21.0
   hooks:
     - id: terraform_docs
