--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,43 +1,50 @@
+---
+# yamllint disable rule:line-length
 repos:
-- repo: git://github.com/pre-commit/pre-commit-hooks
-  rev: v2.4.0
-  hooks:
-   -  id: check-json
-   -  id: check-merge-conflict
-   -   id: trailing-whitespace
-   -   id: end-of-file-fixer
-   -   id: check-yaml
-   -   id: check-added-large-files
-   -   id: pretty-format-json
-       args:
-       - --autofix
-- repo: git://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.1.7
-  hooks:
-  - id: forbid-tabs
-    exclude_types: [python, javascript, dtd, markdown, makefile, xml]
-    exclude: binary|\.bin$
-- repo: git://github.com/kintoandar/pre-commit.git
-  rev: v2.1.0
-  hooks:
-  - id: terraform_fmt
-- repo: git://github.com/pre-commit/pre-commit-hooks
-  rev: v2.4.0
-  stages:
-  - commit
-  - push
-  hooks:
-  -   id: detect-aws-credentials
-  -   id: detect-private-key
-- repo: git://github.com/detailyang/pre-commit-shell
-  rev: 1.0.5
-  hooks:
-  - id: shell-lint
-- repo: git://github.com/igorshubovych/markdownlint-cli
-  rev: v0.20.0
-  hooks:
-  - id: markdownlint
-- repo: git://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.21.0
-  hooks:
-    - id: terraform_docs
+  - repo: git://github.com/pre-commit/pre-commit-hooks
+    rev: v2.5.0
+    hooks:
+      - id: check-json
+      - id: check-merge-conflict
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+      - id: pretty-format-json
+        args:
+          - --autofix
+      - id: detect-aws-credentials
+      - id: detect-private-key
+  - repo: git://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.1.7
+    hooks:
+      - id: forbid-tabs
+        exclude_types: [python, javascript, dtd, markdown, makefile, xml]
+        exclude: binary|\.bin$
+  - repo: git://github.com/detailyang/pre-commit-shell
+    rev: 1.0.5
+    hooks:
+      - id: shell-lint
+  - repo: git://github.com/igorshubovych/markdownlint-cli
+    rev: v0.22.0
+    hooks:
+      - id: markdownlint
+  - repo: git://github.com/adrienverge/yamllint
+    rev: v1.20.0
+    hooks:
+      - id: yamllint
+        name: yamllint
+        description: This hook runs yamllint.
+        entry: yamllint
+        language: python
+        types: [file, yaml]
+  - repo: git://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.25.0
+    hooks:
+      - id: terraform_docs
+  - repo: git://github.com/jameswoolfenden/pre-commit
+    rev: 0.0.20
+    hooks:
+      - id: terraform-fmt
+      - id: checkov-scan
+        language_version: python3.7
