--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,7 @@
 ---
 # yamllint disable rule:line-length
+default_language_version:
+  python: python3
 repos:
   - repo: git://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
@@ -21,8 +23,8 @@ repos:
       - id: forbid-tabs
         exclude_types: [python, javascript, dtd, markdown, makefile, xml]
         exclude: binary|\.bin$
-  - repo: git://github.com/detailyang/pre-commit-shell
-    rev: 1.0.5
+  - repo: git://github.com/jameswoolfenden/pre-commit-shell
+    rev: 0.0.2
     hooks:
       - id: shell-lint
   - repo: git://github.com/igorshubovych/markdownlint-cli
@@ -38,13 +40,11 @@ repos:
         entry: yamllint
         language: python
         types: [file, yaml]
-  - repo: git://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.25.0
-    hooks:
-      - id: terraform_docs
   - repo: git://github.com/jameswoolfenden/pre-commit
-    rev: 0.0.20
+    rev: 0.1.17
     hooks:
       - id: terraform-fmt
       - id: checkov-scan
+        language_version: python3.7
+      - id: tf2docs
         language_version: python3.7
