--- a/example/examplea/Makefile
+++ b/example/examplea/Makefile
@@ -1,20 +1,30 @@
-#Makefile
+# Makefile
+ifdef OS
+   BLAT = $(powershell  -noprofile rm .\.terraform\ -force -recurse)
+else
+   ifeq ($(shell uname), Linux)
+      RM  = rm .terraform/modules/ -fr
+      BLAT= rm .terraform/ -fr
+   endif
+endif
 
 .PHONY: all
 
 all: init plan build
 
 init:
-	rm -rf .terraform/modules/
+	$(RM)
 	terraform init -reconfigure
 
-plan: init
+plan:
 	terraform plan -refresh=true
 
-build:
-	terraform apply -auto-approve
+p:
+	terraform plan -refresh=true
 
-apply:
+apply: build
+
+build:
 	terraform apply -auto-approve
 
 check: init
@@ -27,8 +37,13 @@ docs:
 	terraform-docs md . > README.md
 
 valid:
-	tflint
 	terraform fmt -check=true -diff=true
+	checkov -d . --external-checks-dir ../../checkov
+
+target:
+	@read -p "Enter Module to target:" MODULE;
+	terraform apply -target $$MODULE
 
 purge:
-	rm -rf .terraform/
+	$(BLAT)
+	terraform init -reconfigure
