--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,40 +8,37 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
 
     steps:
       - uses: actions/checkout@v2
         with:
           ref: master
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
-        with:
-          python-version: ${{ matrix.python-version }}
+          token: ${{ github.token }}
       - name: "Terraform Init"
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: 0.14.0
+          tf_actions_version: 0.14.5
           tf_actions_subcommand: "init"
           tf_actions_working_dir: "example/examplea"
       - name: "Terraform Validate"
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: 0.14.0
+          tf_actions_version: 0.14.5
           tf_actions_subcommand: "validate"
           tf_actions_working_dir: "example/examplea"
-      - name: Test with Checkov
-        run: |
-          pip install checkov
-          checkov -d .
+      - name: Checkov action
+        id: checkov
+        uses: bridgecrewio/checkov-action@master
+        with:
+          directory: "example/examplea"
+          framework: terraform
   version:
     name: versioning
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Bump version and push tag
+        if: ${{ !env.ACT }}
         uses: anothrNick/github-tag-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
