--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 # yamllint disable rule:line-length
 default_language_version:
-  python: python3.8
+  python: python3.9
 repos:
   - repo: git://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
@@ -32,7 +32,7 @@ repos:
     hooks:
       - id: markdownlint
   - repo: git://github.com/adrienverge/yamllint
-    rev: v1.25.0
+    rev: v1.26.0
     hooks:
       - id: yamllint
         name: yamllint
@@ -44,7 +44,12 @@ repos:
     rev: v0.1.33
     hooks:
       - id: terraform-fmt
-      - id: checkov-scan
-        language_version: python3.8
+        language_version: python3.9
       - id: tf2docs
-        language_version: python3.8
+        language_version: python3.9
+  - repo: git://github.com/bridgecrewio/checkov
+    rev: '1.0.757'
+    hooks:
+      - id: checkov
+        verbose: true
+        entry: checkov -d example/examplea
