--- a/example/examplea/Makefile
+++ b/example/examplea/Makefile
@@ -38,8 +38,10 @@ docs:
 	terraform-docs md . > README.md
 
 valid:
-	terraform fmt
+	terraform fmt -recursive
 	checkov -d . --external-checks-dir ../../checkov
+	tfsec .
+	terrascan scan
 
 target:
 	@read -p "Enter Module to target:" MODULE;
