--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,7 +10,6 @@ on:
       - master
 env:
   terraform: 0.14.8
-  terraform-docs: 0.12.0
   tf_target_dir: example/examplea
   branch: master
 jobs:
@@ -46,8 +45,10 @@ jobs:
         with:
           python-version: 3.8
       - run: |
+          pip3 install lastversion
+          now=$(lastversion terraform-docs/terraform-docs)
           mkdir $GITHUB_WORKSPACE/bin
-          curl -Lo $GITHUB_WORKSPACE/bin/terraform-docs https://github.com/terraform-docs/terraform-docs/releases/download/v${{ env.terraform-docs }}/terraform-docs-v${{ env.terraform-docs }}-$(uname)-amd64
+          curl -Lo $GITHUB_WORKSPACE/bin/terraform-docs https://github.com/terraform-docs/terraform-docs/releases/download/v${now}/terraform-docs-v${now}-$(uname)-amd64
           chmod +x $GITHUB_WORKSPACE/bin/terraform-docs
           echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
       - uses: pre-commit/action@v2.0.0
